# Sharing-website

backend/: app.db  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: books.py  projects.py
frontend/: package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/pages/: BooksPage.jsx
frontend/src/services/: api.js  bookservice.js  projectservice.js
